--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="#" alt="My Logo">
+                <img style="width: 208px; height:56px;" src="Logo.png" alt="My Logo">
             </div>
             <ul>
                 <li>
@@ -33,7 +33,9 @@
                 <li>
                     <a href="#">Services</a>
                 </li>
-                <button>Contact</button>
+                <button style="background-color: rgba(165, 61, 255, 1); border-radius: 4px; 
+                padding: 12px 24px 12px 24px; width: 126px; height: 48px; border: transparent; 
+                color: white;">Contact</button>
             </ul>
         </div>
 
@@ -41,64 +43,144 @@
             <div class="profile">
                 <div class="sect-1">
                     <div>
-
                         <h1>Hello, I'm Brooklyn Gilbert</h1>
                         <p>I'm a Freelance UI/UX Designer and Developer based in London, England.<br>
                             I strive to build immersive and beautiful web applications through <br>
                             carfully crafted code and user-centric design</p>
-                        <button>Say Hello</button>
+                        <button style="background-color: rgba(165, 61, 255, 1); border-radius: 4px; 
+                            padding: 12px 24px 12px 24px; width: 126px; height: 48px; border: transparent; 
+                            color: white;">Say Hello!</button>
                     </div>
 
 
                     <div class="cards">
                         <div class="card-1" style="border-right: white;">
                             <h3>15 Y.</h3>
-                            <p>Experience</p>
+                            <p style="color:rgba(105, 116, 132, 1);">Experience</p>
                         </div>
 
-                        <div class="card-1">
+                        <div class="card-1" style="margin-left: 3px; margin-right: 3px; ">
                             <h3>250+</h3>
-                            <p>Project Completed</p>
+                            <p style="color:rgba(105, 116, 132, 1);">Project Completed</p>
                         </div>
 
                         <div class="card-1">
                             <h3>58</h3>
-                            <p>Happy Client</p>
+                            <p style="color:rgba(105, 116, 132, 1);">Happy Client</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="sect-2">
                     <img src="guy.png" alt="Picture of me" />
-
                 </div>
+
             </div>
-
-            <div class="about">
-                <div class="about-me">
-                    <div class="pic">
-                        <img src="about.png" alt="Picture of me"/>
-
-                    </div>
-
-                    <div class="details">
-                        <h2>I am Professional User </br> Experience Designer</h2>
-                        <p>I design and develop services for customers specializing creating stylish, modern websites,
-                            web services and online stores. My passion is to design digital user experiences. </p>
-                        <p> I design and develop services for customers specializing creating stylish, modern websites,
-                            web services.</p>
-
-                            <div class="buttons-about">
-                                <button>My Project</button>
-                                <button>Download</button>
-
-                            </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="works"></div>
         </div>
+
+        <div class="about">
+            <div class="about-me">
+                <div class="pic">
+                    <img src="about.png" alt="Picture of me" />
+
+                    <div class="social">
+                        <p>heyy</p>
+                    </div>
+
+                </div>
+
+                <div class="details">
+                    <h2>I am Professional User </br> Experience Designer</h2>
+                    <p>I design and develop services for customers specializing </br> creating stylish, modern
+                        websites,
+                        web services and online stores. My passion is to design digital user experiences. </p>
+                    <p> I design and develop services for customers specializing </br>creating stylish, modern
+                        websites,
+                        web services.</p>
+
+                    <div class="buttons-about">
+                        <button class="btn1">My Project</button>
+                        <button class="btn2">Download CV</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="works"></div>
+        <div class="Work-process">
+            <div class="notes">
+                <h3>Work Process</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu, varius eget velit non,
+                    laoreet
+                    imperdiet orci. Mauris ultrices eget lorem ac vestibulum. Suspendis imperdiet, </br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu, varius eget velit non.
+                </p>
+            </div>
+            <div style="display: flex;" class="card-4">
+                <div class="first">
+                    <div class="card-4-1">
+                        <div style="background-color: rgba(165, 61, 255, 1);
+;" class="icon"></div>
+                        <h4>1. Research</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla purus arcu.</p>
+                    </div>
+                    <div style="margin-top:10px;" class="card-4-1">
+                        <div style="background-color:rgba(237, 216, 255, 0.5);" class="icon"></div>
+                        <h4>2. Analyze</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla purus arcu.</p>
+                    </div>
+
+                </div>
+                <div style="margin-left: 10px; margin-top:10px;" class="second">
+                    <div class="card-4-1">
+                        <div style="background-color:rgba(237, 216, 255, 0.5);" class="icon"></div>
+                        <h4>3. Design</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla purus arcu.</p>
+                    </div>
+                    <div style="margin-top:10px;" class="card-4-1">
+                        <div style="background-color:rgba(237, 216, 255, 0.5);" class="icon"></div>
+                        <h4>4. Launch</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla purus arcu.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="Portfolio">
+            <div class="text">
+                <h1>Portfolio</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, </br>
+                    but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="card-5">
+                <div class="card-5-1">
+                    <img src="1.png" alt="A picture" />
+                    <div class="desc">
+                    <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                    <h4>Product Admin Dashboard</h4>
+                    <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id imperdiet lacus.
+                    </p>
+                    <button class="case" > Case Study</button>
+                </div>
+                </div>
+                <div class="card-5-1">2</div>
+                <div class="card-5-1">3</div>
+                <div class="card-5-1">4</div>
+                <div class="card-5-1">5</div>
+                <div class="card-5-1">6</div>
+            </div>
+
+        </div>
+
+    </div>
     </div>
     </div>
 
