--- a/index.html
+++ b/index.html
@@ -164,24 +164,170 @@
                 <div class="card-5-1">
                     <img src="1.png" alt="A picture" />
                     <div class="desc">
-                    <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
-                    <h4>Product Admin Dashboard</h4>
-                    <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id imperdiet lacus.
-                    </p>
-                    <button class="case" > Case Study</button>
+                        <h6 style="margin-bottom: 0;">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id imperdiet
+                            lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+                    </div>
                 </div>
+
+                <div class="card-5-1">
+                    <img src="2.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id imperdiet
+                            lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+
+                    </div>
                 </div>
-                <div class="card-5-1">2</div>
-                <div class="card-5-1">3</div>
-                <div class="card-5-1">4</div>
-                <div class="card-5-1">5</div>
-                <div class="card-5-1">6</div>
+
+
+                <div class="card-5-1">
+                    <img src="3.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id imperdiet
+                            lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+                    </div>
+                </div>
+
+
+                <div class="card-5-1">
+                    <img src="4.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id
+                            imperdiet lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+                    </div>
+                </div>
+
+
+                <div class="card-5-1">
+                    <img src="5.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec id
+                            imperdiet lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+                    </div>
+                </div>
+
+                <div class="card-5-1">
+                    <img src="6.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; ">UI-UX Design</h6>
+                        <h4>Product Admin Dashboard</h4>
+                        <p>Vivamus eleifend convallis ante, non pharetra libero molestie laoreet. Donec
+                            id imperdiet lacus.
+                        </p>
+                        <button class="case"> Case Study</button>
+
+                    </div>
+                </div>
+
             </div>
 
+            <div class="btn-project">
+                <button style="font-weight: 600;
+                            color: white;
+                            line-height: 24px;
+                            background-color: rgba(165, 61, 255, 1);
+                            border: 1px solid transparent;
+                            padding: 12px 24px 12px 24px; 
+                            border-radius: 4px;   
+                            width: 132px;
+                            height: 48px;  
+                            text-decoration: none; ">More Project</button>
+            </div>
+        </div>
+        <div class="idea">
+            <h2 style="color: white;">Do you have Project Idia?</br>
+                Let's discuss your project!</h2>
+            <p style="color: rgba(165, 172, 181, 1);">
+                There are many variations of passages of Lorem Ipsum available, </br>
+                but the majority have suffered alteration.</p>
+            <div class="btn-project">
+                <button style="font-weight: 600;
+                                color: white;
+                                line-height: 24px;
+                                background-color: rgba(165, 61, 255, 1);
+                                border: 1px solid transparent;
+                                padding: 12px 24px 12px 24px; 
+                                border-radius: 4px;   
+                                width: 200px;
+                                height: 48px;  
+                                text-decoration: none; ">Let's work together</button>
+            </div>
         </div>
 
-    </div>
-    </div>
+        <div class="Blog">
+            <div class="blog-text">
+                <h1 style="color: rgba(19, 34, 56, 1);">Blog</h1>
+                <p style="color: rgba(165, 172, 181, 1);">There are many variations of passages of Lorem Ipsum
+                    available,</br>
+                    but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="card-6">
+                <div class="card-6-1">
+                    <img src="first.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; font-weight: 400; color: rgba(135, 144, 157, 1);">22 Oct, 2020 /
+                            246 Comments</h6>
+                        <p style="font-weight: 500;">Lorem ipsum dolor sit consea.</br> Nulla purus arcu</p>
+                    </div>
+                </div>
+
+                <div class="card-6-1">
+                    <img src="second.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; font-weight: 400; color: rgba(135, 144, 157, 1);">22 Oct, 2020 /
+                            246 Comments</h6>
+                        <p style="font-weight: 500;">Lorem ipsum dolor sit consea.</br> Nulla purus arcu</p>
+                    </div>
+                </div>
+
+                <div class="card-6-1">
+                    <img src="third.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; font-weight: 400; color: rgba(135, 144, 157, 1);">22 Oct, 2020 /
+                            246 Comments</h6>
+                        <p style="font-weight: 500;">Lorem ipsum dolor sit consea.</br> Nulla purus arcu</p>
+                    </div>
+                </div>
+
+                <div class="card-6-1">
+                    <img src="last.png" alt="A picture" />
+                    <div class="desc">
+                        <h6 style="margin-bottom: 0; font-weight: 400; color: rgba(135, 144, 157, 1);">22 Oct, 2020 /
+                            246 Comments</h6>
+                        <p style="font-weight: 500;">Lorem ipsum dolor sit consea.</br> Nulla purus arcu</p>
+                    </div>
+                </div>
+
+                <div style="width: 100%; display: flex; justify-content: center; align-items: center; padding-top: 3%;">
+                    <div style="width: 30px; height: 8px; border-radius: 10px; background-color:rgba(33, 12, 51, 1);"></div>
+                    <div style="width: 8px; margin-left: 10px; margin-right: 10px;  height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);"></div>
+                    <div style="width: 8px; height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);" ></div>
+                </div>
+
+
+
+            </div>
+        </div>
     </div>
 
 
