--- a/index.html
+++ b/index.html
@@ -319,13 +319,41 @@
                 </div>
 
                 <div style="width: 100%; display: flex; justify-content: center; align-items: center; padding-top: 3%;">
-                    <div style="width: 30px; height: 8px; border-radius: 10px; background-color:rgba(33, 12, 51, 1);"></div>
-                    <div style="width: 8px; margin-left: 10px; margin-right: 10px;  height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);"></div>
-                    <div style="width: 8px; height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);" ></div>
+                    <div style="width: 50px; height: 8px; border-radius: 10px; background-color:rgba(33, 12, 51, 1);">
+                    </div>
+                    <div
+                        style="width: 8px; margin-left: 10px; margin-right: 10px;  height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);">
+                    </div>
+                    <div
+                        style="width: 8px; height: 8px; border-radius: 30px; background-color: rgba(195, 199, 206, 1);">
+                    </div>
                 </div>
 
 
 
+            </div>
+        </div>
+
+        <div class="Experience-2">
+            <div class="notes">
+                <h4>Work Process</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu, varius eget velit non,
+                    laoreet
+                    imperdiet orci. Mauris ultrices eget lorem ac vestibulum. Suspendis imperdiet, </br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu, varius eget velit non.
+                </p>
+                <button style="background-color: rgba(165, 61, 255, 1); border-radius: 4px; 
+                            padding: 12px 24px 12px 24px; width: 126px; height: 48px; border: transparent; 
+                            color: white;">Say Hello!</button>
+            </div>
+
+            <div>
+                <div class="rectangle">
+                    <h3>User Experience (UX)</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla purus arcu, varius eget velit non, laoreet imperdiet orci. 
+                        Mauris ultrices eget lorem ac vestibulum.</p>
+                </div>
             </div>
         </div>
     </div>
